added streaming player successfully android

--- a/src/services/localization/translations/fr.json
+++ b/src/services/localization/translations/fr.json
@@ -59,7 +59,7 @@
     "menu/highlights":"Points forts",
     "menu/history":"Histoire",
     "menu/logout":"Quittez",
-    "menu/verse":"Verset du jour",
+    "menu/verse":"Verset à méditer.",
     "menu/playlist":"Playlist",
     "menu/hazard":"Chapitre Au Hazard",
 
